src/qt/libqabstractitemview.bf

	[LinkName("QAbstractItemView_VerticalScrollbarAction")]
	public static extern void QAbstractItemView_VerticalScrollbarAction(Self* c_this, int32 action);
	[LinkName("QAbstractItemView_HorizontalScrollbarAction")]
	public static extern void QAbstractItemView_HorizontalScrollbarAction(Self* c_this, int32 action);
	[LinkName("QAbstractItemView_VerticalScrollbarValueChanged")]
	public static extern void QAbstractItemView_VerticalScrollbarValueChanged(Self* c_this, int32 value);
	[LinkName("QAbstractItemView_HorizontalScrollbarValueChanged")]
	public static extern void QAbstractItemView_HorizontalScrollbarValueChanged(Self* c_this, int32 value);
	[LinkName("QAbstractItemView_CloseEditor")]
	public static extern void QAbstractItemView_CloseEditor(Self* c_this, QWidget* editor, int64 hint);
	[LinkName("QAbstractItemView_CommitData")]
	public static extern void QAbstractItemView_CommitData(Self* c_this, QWidget* editor);
	[LinkName("QAbstractItemView_EditorDestroyed")]
	public static extern void QAbstractItemView_EditorDestroyed(Self* c_this, QObject* editor);
	[LinkName("QAbstractItemView_Connect_Pressed")]
	public static extern void QAbstractItemView_Connect_Pressed(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_Connect_Clicked")]
	public static extern void QAbstractItemView_Connect_Clicked(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_Connect_DoubleClicked")]
	public static extern void QAbstractItemView_Connect_DoubleClicked(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_Connect_Activated")]
	public static extern void QAbstractItemView_Connect_Activated(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_Connect_Entered")]
	public static extern void QAbstractItemView_Connect_Entered(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_Connect_ViewportEntered")]
	public static extern void QAbstractItemView_Connect_ViewportEntered(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_Connect_IconSizeChanged")]
	public static extern void QAbstractItemView_Connect_IconSizeChanged(Self* c_this, c_intptr slot);
	[LinkName("QAbstractItemView_MoveCursor")]
	public static extern QModelIndex QAbstractItemView_MoveCursor(Self* c_this, int64 cursorAction, int64 modifiers);
	[LinkName("QAbstractItemView_HorizontalOffset")]
	public static extern int32 QAbstractItemView_HorizontalOffset(Self* c_this);
	[LinkName("QAbstractItemView_VerticalOffset")]
	public static extern int32 QAbstractItemView_VerticalOffset(Self* c_this);
	[LinkName("QAbstractItemView_IsIndexHidden")]
	public static extern bool QAbstractItemView_IsIndexHidden(Self* c_this, QModelIndex* index);
	[LinkName("QAbstractItemView_SetSelection")]
	public static extern void QAbstractItemView_SetSelection(Self* c_this, QRect* rect, int64 command);
	[LinkName("QAbstractItemView_VisualRegionForSelection")]
	public static extern QRegion QAbstractItemView_VisualRegionForSelection(Self* c_this, QItemSelection* selection);
	[LinkName("QAbstractItemView_SelectedIndexes")]
	public static extern QModelIndex[] QAbstractItemView_SelectedIndexes(Self* c_this);
	[LinkName("QAbstractItemView_Edit2")]
	public static extern bool QAbstractItemView_Edit2(Self* c_this, QModelIndex* index, int64 trigger, QEvent* event);
	[LinkName("QAbstractItemView_SelectionCommand")]
	public static extern int64 QAbstractItemView_SelectionCommand(Self* c_this, QModelIndex* index, QEvent* event);
	[LinkName("QAbstractItemView_StartDrag")]
	public static extern void QAbstractItemView_StartDrag(Self* c_this, int64 supportedActions);
	[LinkName("QAbstractItemView_InitViewItemOption")]
	public static extern void QAbstractItemView_InitViewItemOption(Self* c_this, QStyleOptionViewItem* option);
	[LinkName("QAbstractItemView_State")]
	public static extern int64 QAbstractItemView_State(Self* c_this);
	[LinkName("QAbstractItemView_SetState")]
	public static extern void QAbstractItemView_SetState(Self* c_this, int64 state);
	[LinkName("QAbstractItemView_ScheduleDelayedItemsLayout")]
	public static extern void QAbstractItemView_ScheduleDelayedItemsLayout(Self* c_this);
	[LinkName("QAbstractItemView_ExecuteDelayedItemsLayout")]
	public static extern void QAbstractItemView_ExecuteDelayedItemsLayout(Self* c_this);
	[LinkName("QAbstractItemView_SetDirtyRegion")]
	public static extern void QAbstractItemView_SetDirtyRegion(Self* c_this, QRegion* region);
	[LinkName("QAbstractItemView_ScrollDirtyRegion")]
	public static extern void QAbstractItemView_ScrollDirtyRegion(Self* c_this, int32 dx, int32 dy);
	[LinkName("QAbstractItemView_DirtyRegionOffset")]
	public static extern QPoint QAbstractItemView_DirtyRegionOffset(Self* c_this);
	[LinkName("QAbstractItemView_StartAutoScroll")]
	public static extern void QAbstractItemView_StartAutoScroll(Self* c_this);
	[LinkName("QAbstractItemView_StopAutoScroll")]
	public static extern void QAbstractItemView_StopAutoScroll(Self* c_this);
	[LinkName("QAbstractItemView_DoAutoScroll")]
	public static extern void QAbstractItemView_DoAutoScroll(Self* c_this);
	[LinkName("QAbstractItemView_FocusNextPrevChild")]
	public static extern bool QAbstractItemView_FocusNextPrevChild(Self* c_this, bool next);
	[LinkName("QAbstractItemView_Event")]
	public static extern bool QAbstractItemView_Event(Self* c_this, QEvent* event);
	[LinkName("QAbstractItemView_ViewportEvent")]
	public static extern bool QAbstractItemView_ViewportEvent(Self* c_this, QEvent* event);
	[LinkName("QAbstractItemView_MousePressEvent")]
	public static extern void QAbstractItemView_MousePressEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QAbstractItemView_MouseMoveEvent")]
	public static extern void QAbstractItemView_MouseMoveEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QAbstractItemView_MouseReleaseEvent")]
	public static extern void QAbstractItemView_MouseReleaseEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QAbstractItemView_MouseDoubleClickEvent")]
	public static extern void QAbstractItemView_MouseDoubleClickEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QAbstractItemView_DragEnterEvent")]
	public static extern void QAbstractItemView_DragEnterEvent(Self* c_this, QDragEnterEvent* event);
	[LinkName("QAbstractItemView_DragMoveEvent")]
	public static extern void QAbstractItemView_DragMoveEvent(Self* c_this, QDragMoveEvent* event);
	[LinkName("QAbstractItemView_DragLeaveEvent")]
	public static extern void QAbstractItemView_DragLeaveEvent(Self* c_this, QDragLeaveEvent* event);
	[LinkName("QAbstractItemView_DropEvent")]
	public static extern void QAbstractItemView_DropEvent(Self* c_this, QDropEvent* event);
	[LinkName("QAbstractItemView_FocusInEvent")]
	public static extern void QAbstractItemView_FocusInEvent(Self* c_this, QFocusEvent* event);
	[LinkName("QAbstractItemView_FocusOutEvent")]
	public static extern void QAbstractItemView_FocusOutEvent(Self* c_this, QFocusEvent* event);
	[LinkName("QAbstractItemView_KeyPressEvent")]
	public static extern void QAbstractItemView_KeyPressEvent(Self* c_this, QKeyEvent* event);
	[LinkName("QAbstractItemView_ResizeEvent")]
	public static extern void QAbstractItemView_ResizeEvent(Self* c_this, QResizeEvent* event);
	[LinkName("QAbstractItemView_TimerEvent")]
	public static extern void QAbstractItemView_TimerEvent(Self* c_this, QTimerEvent* event);
	[LinkName("QAbstractItemView_InputMethodEvent")]
	public static extern void QAbstractItemView_InputMethodEvent(Self* c_this, QInputMethodEvent* event);
	[LinkName("QAbstractItemView_EventFilter")]
	public static extern bool QAbstractItemView_EventFilter(Self* c_this, QObject* object, QEvent* event);
	[LinkName("QAbstractItemView_DropIndicatorPosition")]
	public static extern int64 QAbstractItemView_DropIndicatorPosition(Self* c_this);
	[LinkName("QAbstractItemView_ViewportSizeHint")]
	public static extern QSize QAbstractItemView_ViewportSizeHint(Self* c_this);
	[LinkName("QAbstractItemView_Tr2")]
	public static extern libqt_string QAbstractItemView_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractItemView_Tr3")]
	public static extern libqt_string QAbstractItemView_Tr3(char8[] s, char8[] c, int32 n);
}